Fix several layout issues

--- a/app/assets/stylesheets/elements/_banner.scss
+++ b/app/assets/stylesheets/elements/_banner.scss
@@ -29,7 +29,7 @@
     box-shadow: inset 0 0 0 3px $border-color;
 
     &::before {
-      background: lighten($body-bg, 5%);
+      display: none;
     }
   }
 
