--- a/app/assets/stylesheets/elements/_chart.scss
+++ b/app/assets/stylesheets/elements/_chart.scss
@@ -17,6 +17,10 @@
     opacity: .45;
     background: $black;
     box-shadow: 0 0 2rem 2rem $black;
+
+    .simple-view & {
+      display: none;
+    }
   }
 }
 
