--- a/app/assets/stylesheets/elements/_items.scss
+++ b/app/assets/stylesheets/elements/_items.scss
@@ -95,15 +95,18 @@
   }
 
   .simple-view & {
-    display: block;
+    display: grid;
+    grid-template: "title favorite"
+                   "code code";
+    grid-template-columns: calc(100% - #{ $favorite-width * 2 }) $favorite-width * 2;
     border: 3px solid $border-color;
     margin-bottom: 1rem;
-    padding-top: 0;
+    padding: 0;
 
     @include media-min(sm) {
       display: grid;
-      grid-template: "title code";
-      grid-template-columns: calc(100% - #{ $code-width }) $code-width;
+      grid-template: "title favorite code";
+      grid-template-columns: calc(100% - #{ $code-width + $favorite-width }) $favorite-width $code-width;
     }
   }
 }
@@ -114,6 +117,10 @@
 
   @include media-min(sm) {
     margin: auto $margin / 4;
+  }
+
+  .simple-view & {
+    margin-right: 1rem;
   }
 }
 
@@ -262,6 +269,7 @@
 
   .simple-view & {
     background: $bg-dark;
+    border-radius: 0;
   }
 }
 
@@ -312,6 +320,10 @@
     &:active {
       color: $white;
     }
+  }
+
+  .item--bottom & {
+    margin: $margin / 6 0;
   }
 }
 
