--- a/app/assets/stylesheets/elements/_while-you-wait.scss
+++ b/app/assets/stylesheets/elements/_while-you-wait.scss
@@ -44,6 +44,10 @@
     padding: .25rem 0;
     text-decoration: none;
   }
+
+  .simple-view & {
+    padding: 0 0 0 1rem;
+  }
 }
 
 .while-you-wait__code {
